SERVER-76875 Exclude fields with embedded dots from 2D and FTS indexes